<resources>
    <string name="app_name">PlanetSide 2</string>
    <string name="large_text">"Profile.\n\n""</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">PlanetSide 2 Stats</string>
    <string name="welcome">Welcome</string>
    <string name="nicknametext">Enter your nickname:</string>
    <string name="nickname">""</string>
    <string name="editText" />
    <string name="toastEmptyNickname">You need a nickname</string>
    <string name="faction">Faction:</string>
    <string name="infochara">Character informations</string>
    <string name="vanu">Vanu Sovereignity</string>
    <string name="conglo">New Conglomerate</string>
    <string name="terran">Terran Republic</string>
    <string name="nanite">Nanite Systems</string>
    <string name="creation_date">Date of creation:</string>
    <string name="last_login">Last Login:</string>
    <string name="br">Battle Rank:</string>
    <string name="time_played">Temps de jeu:</string>
    <string name="available_certs">Available certs:</string>
    <string name="total_certs">Total certs earned:</string>
    <string name="kills_stats_title">Killed stats</string>
    <string name="total_killed">Total killed:</string>
    <string name="oneLifeKills">One Life Killed:</string>
</resources>
