<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/infochara"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="70dp">

        <TableRow>
            <TextView
                android:text="@string/faction"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/faction"
                android:layout_marginLeft="-50dp"
                android:layout_marginStart="-50dp" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/br"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/battle_rank"
                android:layout_marginLeft="-50dp"
                android:layout_marginStart="-50dp" />
        </TableRow>
        <TableRow>
            <TextView android:textStyle="bold" />

            <TextView
                android:layout_marginLeft="-50dp"
                android:layout_marginStart="-50dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/creation_date"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/creation_date"
                android:layout_marginLeft="-50dp"
                android:layout_marginStart="-50dp" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/last_login"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/last_login"
                android:layout_marginLeft="-50dp"
                android:layout_marginStart="-50dp" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/time_played"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/minutes_played"
                android:layout_marginLeft="-50dp"
                android:layout_marginStart="-50dp" />
        </TableRow>

        <TableRow>

            <TextView android:textStyle="bold" />

            <TextView
                android:layout_marginLeft="-50dp"
                android:layout_marginStart="-50dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/available_certs"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/certs"
                android:layout_marginLeft="-50dp"
                android:layout_marginStart="-50dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/total_certs"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/certs_total"
                android:layout_marginLeft="-50dp"
                android:layout_marginStart="-50dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/kills_stats_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow>

            <TextView android:textStyle="bold" />

            <TextView
                android:layout_marginLeft="-50dp"
                android:layout_marginStart="-50dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/total_killed"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_kills"
                android:layout_marginLeft="-50dp"
                android:layout_marginStart="-50dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="Max tués en une vie: "
                android:textStyle="bold" />

            <TextView
                android:id="@+id/one_live_total_kills"
                android:layout_marginLeft="-50dp"
                android:layout_marginStart="-50dp" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
